--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,20 +7,8 @@
 
 name: Java CI with Gradle
 
-on:
-  push:
-    branches:
-    - master
-    - junit4-platform
-    - junit4
-    - testng  
-  pull_request:
-    branches:
-    - master
-    - junit4-platform
-    - junit4
-    - testng
-# on: [push, pull_request]
+
+on: [push, pull_request]
 
 jobs:
   build:
